# HPC-Project

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mpi.cpp
